--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="first-slider multiple-items multiple-items _clearfix">
             <div class="slide">
                 <div class="img-container">
-                    <img src="img/telebim.jpg" alt="ad1">
+                    <img src="img/2.JPEG" alt="ad1">
                 </div>
                 <p>Reklama na telebimie</p>
                 <p>Innowacyjność jest cechą ambitnych, kreatywnych i silnych 
@@ -55,8 +55,7 @@
                     pogodę oraz reklamy. W samej Warszawie liczba osób podróżujących dziennie 
                     komunikacją miejską wynosi około 1 900 000! Liczba ta wzrasta z roku na rok, 
                     co daje większy zasięg kampanii reklamowych. Jest to duża szansa dla 
-                    każdego przedsiębiorcy, aby zostać zauważonym i rozpoznawalnym. 
-                    (Zdjęcia z ekranów w komunikacji miejskiej).</p>
+                    każdego przedsiębiorcy, aby zostać zauważonym i rozpoznawalnym.</p>
             </div>
             <div class="slide">
                 <div class="img-container">
@@ -66,7 +65,7 @@
                 <p>Projektując logo marki musimy wziąć pod uwagę wiele czynników. 
                     Skojarzenia kolorystyczne oraz rzeczowe, odczucia wizualne, kulturę, 
                     spójność nazwy z grafiką.
-                    VIDO oferuje stworzenie logotypu, sygnetu lub całego logo 
+                    IVIDO oferuje stworzenie logotypu, sygnetu lub całego logo 
                     uwzględniając wszystkie wyżej wymienione podstawy. Doświadczenie, 
                     kreatywność oraz zaangażowanie w swoją pracę to cechy, które posiadają 
                     osoby odpowiedzialne za tworzenie grafik dla Naszych zleceniobiorców.</p>
@@ -99,10 +98,10 @@
             największą skuteczność w obecnych czasach. Pomagamy wypromować 
             przedsiębiorstwa bez względu na wielkość.</p>
     </section>
-    <section class="price-list container-fluid" id="price-list">
+    <section class="price-list container-fluid " id="price-list">
         <div class="THElist">
             <h2>Cennik reklamy na telebimie</h2>
-            <div class="table-block">
+            <div class="table-block pb-5">
                 <div class="price-table">
                     <h3>1 miesiąc</h3>
                     <table>
@@ -360,22 +359,26 @@
                     Preferowane formaty pliku: .jpg; .png; .wmv; .swf</p>
             </div>
             <div class="col-md-6">
-                <img src="img/2.JPEG" alt="2" class="placeholder-image">
+                <img src="img/bottom.png" alt="2" class="placeholder-image">
             </div>
         </div>  
     </div>
-    <footer class="container-fluid">
-        <div class="row">
-            <div class="col-md-7 offset-md-1">
-                <img src="img/map.png" alt="mapa" class="py-3">
-            </div>
-            <div class="col-md-3" id="contacts">
-                <h2 class="mt-5">Kontakt</h2>
-                <p>+48 794 297 038</p>
-                <p class="e-mail">kontakt@ivido.com</p>
-                <div class="fb-footer">
-                    <h3>Znajdź nas na </h3>
-                    <a href="#"><img src="img/fb-footer.png" alt="fb-icon"></a>
+    <footer class="footer-grey mt-5">
+        <div class="container">
+            <div class="row py-4">
+                <div class="col-md-4 offset-md-2">
+                    <img src="img/1.png" alt="mapa" class="pt-4 pb-5 custom-img">
+                </div>
+                <div class="col-md-5" id="contacts">
+                    <div class="pl-3">
+                        <h4 class="mt-5 pb-2">Skontaktuj się z Nami</h4>
+                        <h4>Tel.+48 794 297 038</h4>
+                        <h4 class="e-mail">E-mail kontakt@ivido.pl</h4>
+                        <div class="fb-footer">
+                            <h4 class="pt-3">Znajdź Nas na </h4>
+                            <a href="https://www.facebook.com/IVIDO-2057506941171513/" class="pl-3 pt-4"><img src="img/fb-footer.png" alt="fb-icon"></a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
